adding aws related files

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ sudo: required
 services:
   - docker
 
-
 before_install:
   - docker build -t anu26/react-test -f ./client/Dockerfile.dev ./client
 
@@ -20,5 +19,16 @@ after_sucess:
   - docker push anu26/multi-client
   - docker push anu26/multi-nginx
   - docker push anu26/multi-server
-  - docker push anu26/multi-worker 
-  
+  - docker push anu26/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-401155515458
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
